--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     </p>
     <h2>Flower pic</h2>
     <img src="./images/flower.jpg"><br>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum a vel itaque consequatur iusto. Minus esse facilis autem tempore qui fugit quo! Molestias vel expedita officia esse, minus incidunt ipsa autem itaque repellendus, aut fugiat ratione perferendis, dolor dicta saepe.</p>
     <a href="./index.html">index link</a>
 </body>
 </html>
