--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <a href="./about.html">About linkd</a>
     <h2>New Browine Picture</h2>
     <img src="./images/browine 4.jpg" style="width: auto; border: 10px solid purple;border-radius: 5px;">
+    <h2>Recipe</h2>
+    <img src="./images/browine recipe 1.jpeg" style="border: 10px groove brown;">
 </body>
 </html>
