--- a/about.html
+++ b/about.html
@@ -16,5 +16,6 @@
     <img src="./images/flower.jpg"><br>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum a vel itaque consequatur iusto. Minus esse facilis autem tempore qui fugit quo! Molestias vel expedita officia esse, minus incidunt ipsa autem itaque repellendus, aut fugiat ratione perferendis, dolor dicta saepe.</p>
     <a href="./index.html">index link</a>
+    <h1>Edited code:</h1>
 </body>
 </html>
